# yahoo_downloader

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  TODO.md  app.rc  config_manager.cpp  config_manager.h  downloader.cpp  downloader.h  downloader_worker.cpp  downloader_worker.h  fetch_nse_tickers.cpp  fetch_nse_tickers.h  main.cpp  main_dialog.cpp  main_dialog.h  progress_dialog.cpp  progress_dialog.h  progress_dialog.ui  resources.qrc  settings.ini  structure.txt  ydl_input.ui
utils/: csv_writer.cpp  csv_writer.h  file_utils.cpp  file_utils.h
